# Store-cpp

./: .gitignore  LICENSE
src/: Store.hpp
store.common/src/: background_worker.hpp  base64.hpp  file.hpp  logger.hpp  process.hpp  runtime_get_tuple.hpp  sha256.hpp  socket.hpp  spdlogger.hpp  time.hpp  uuid.h  uuid.hxx  web_token.hpp
store.common/test/: 000-fixtures.hpp  000-jwt-rsa.cpp  001-jwt-webtoken.cpp  002-jwt-rsa-from-file.cpp  003-jwt-rsa-from-server.cpp  README.md
store.common/test/resources/: jwtRS256.sample.key.pub
store.events/src/: event.hpp  eventstore.hpp  eventstream.hpp
store.models/src/: enumerations.hpp  extensions.hpp  interfaces.hpp  models.hpp  primitive.hpp
store.models/src/common/: group_by.hpp  singleton.hpp  uuid.hxx
store.models/src/ioc/: service_provider.hpp  simple_container.hpp  singleton.hpp
store.notifier/src/: notifier.hpp
store.rx/src/: rx.hpp
store.servers/: README.md
store.servers/src/: http-server.hpp  replies.hpp  rs256-secure-redis-server.hpp  rs256-secure-redis-ws-server.hpp  rs256-secure-server.hpp  rs256-secure-ws-server.hpp  session.hpp  util.hpp  ws-server.hpp  ws-user.hpp
store.servers/test/: 001-ws-server.cpp  002-ws-server-redis.cpp  003-jwt-rsa-from-server.cpp  004-ws-rs256-server.cpp  005-ws-rs256-server-redis.cpp  006-rs256-server-publish.cpp
store.servers/test/resources/: jwtRS256.sample.key
store.storage.cassandra/src/: ca_resource_common.hpp  ca_resource_manager.hpp  ca_resource_modified.hpp  ca_resource_purpose_handler.hpp  cassandra_base_client.hpp
store.storage.cassandra/test/: index-async-spec0.cpp  index-base-client-spec1.cpp  index-base-client-spec2.cpp  index-base-client-spec3.cpp  index-base-client-spec4.cpp
store.storage.connection-pools/src/: mssql.hpp  mssql_dblib.hpp  pgsql.hpp
store.storage.kafka/: README.md
store.storage.kafka/src/: kafka_base_client.hpp
store.storage.kafka/test/: index-base-client-spec.cpp  index-sql-notifier-spec.cpp
store.storage.kudu/test/: CMakeLists.txt  README.md  example.cc  quickstart.yml
store.storage.mongo/src/: mongo_base_client.hpp  mongo_client.hpp  mongo_instance.hpp  mongo_logger.hpp
store.storage.mongo/test/: index.cpp  test-pool.cpp  testing
store.storage.mysql/src/: my_client.hpp
store.storage.mysql/test/: 000-basic-select.cpp
store.storage.pgsql/src/: pg_client.hpp  pg_eventstore.hpp  pg_largeobject.hpp  pg_notifier.hpp
store.storage.redis/src/: README.md  redis_client.hpp
store.storage.redis/test/: 000-basic-crud.cpp  001-jwt.cpp  002-basic-graph.cpp  003-pubsub.cpp
store.storage.sqlserver/src/: mssql_base_client.hpp  mssql_client.hpp  mssql_dblib_base_client.hpp  mssql_notifier.hpp
store.storage.sqlserver/test/: index-notifier.cpp  index.cpp
store.storage/src/: base_client.hpp
test/: 000-logger.cpp  001-max-event.cpp  002-must-exist.cpp  003-pgsql-count.cpp  004-pgsql-xml.cpp  005-parse-form.cpp  006-pgsql-lo.cpp  007-pgsql-err-handling.cpp  CMakeLists.txt  README.md  events.cpp  index.cpp  sample-2.txt  sample-post-data.txt
test/include/: test_events.hpp  test_fixtures.hpp  test_logger.hpp
